# xlsm-archaeologist

./: .gitignore  ACCEPTANCE.md  ARCHITECTURE.md  CLAUDE.md  CLI_CONTRACT.md  CONVENTIONS.md  DATA_MODEL.md  PHASE_PLAN.md  PROJECT.md  README.md  TECH_STACK.md  pyproject.toml  viewer.html
.github/workflows/: release.yml
phases/phase_1_skeleton/: README.md  acceptance.md  tasks.md
phases/phase_2_extraction/: README.md  acceptance.md  tasks.md
phases/phase_3_formula_analysis/: README.md  acceptance.md  tasks.md
phases/phase_4_vba_analysis/: README.md  acceptance.md  tasks.md
phases/phase_5_dependency_graph/: README.md  acceptance.md  tasks.md
phases/phase_6_reports/: README.md  acceptance.md  tasks.md
prompts/: kickoff.md
reference/: csv_schemas.md  formula_categories.md  output_schema.md  vba_analysis_rules.md
reference/example_outputs/: 00_summary.example.json  05_formulas.example.json  08_vba_procedures.example.json  README.md
src/xlsm_archaeologist/: __init__.py  __main__.py  cli.py  config.py  errors.py  runner.py
src/xlsm_archaeologist/analyzers/: cycle_detector.py  dependency_analyzer.py  dependency_graph_builder.py  formula_analyzer.py  formula_classifier.py  formula_complexity.py  formula_parser.py  formula_tokenizer.py  orphan_detector.py  summary_analyzer.py  vba_analyzer.py  vba_call_graph.py  vba_procedure_splitter.py  vba_range_detector.py
src/xlsm_archaeologist/extractors/: __init__.py  cell_extractor.py  named_range_extractor.py  sheet_extractor.py  (+3 more)
tests/: README.md  conftest.py  test_e2e.py  test_phase_1_skeleton.py  test_phase_2_extraction.py  test_phase_3_formula.py  test_phase_4_vba.py  test_phase_5_graph.py  test_phase_6_reports.py  test_plan.md
tests/fixtures/: README.md  circular.xlsm  cross_sheet_chain.xlsm  formulas_basic.xlsm  formulas_complex.xlsm  hidden_sheets.xlsm  simple.xlsm  vba_basic.xlsm  vba_dynamic_range.xlsm  with_named_range.xlsm  with_validation.xlsm
(+22 files in other folders)
