[project]
name = "xlsm-archaeologist"
version = "0.1.0"
description = "Archaeologize complex .xlsm files into structured JSON/CSV data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["excel", "xlsm", "vba", "analysis", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openpyxl >= 3.1, < 4.0",
    "oletools >= 0.60, < 1.0",
    "networkx >= 3.2, < 4.0",
    "typer >= 0.12, < 1.0",
    "pydantic >= 2.5, < 3.0",
    "pydantic-settings >= 2.1, < 3.0",
    "rich >= 13.7, < 14.0",
    "jinja2 >= 3.1, < 4.0",
]

[project.scripts]
xlsm-archaeologist = "xlsm_archaeologist.cli:app"

[project.urls]
Homepage = "https://github.com/frank0124p/xlsm-archaeologist"
Repository = "https://github.com/frank0124p/xlsm-archaeologist"
Issues = "https://github.com/frank0124p/xlsm-archaeologist/issues"

[dependency-groups]
dev = [
    "pytest >= 8.0, < 9.0",
    "pytest-cov >= 5.0, < 6.0",
    "ruff >= 0.6, < 1.0",
    "mypy >= 1.8, < 2.0",
    "types-openpyxl >= 3.1, < 4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xlsm_archaeologist"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[[tool.mypy.overrides]]
module = ["oletools.*", "networkx.*"]
ignore_missing_imports = true
